READY FOR REVIEW FUNCTIONS_(NEED)_EXERCISES

--- a/5.2_functions__exercises/functions_(need)_exercises.ipynb
+++ b/5.2_functions__exercises/functions_(need)_exercises.ipynb
@@ -1,1 +1,250 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Need) Exercises</span></div>"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Need) Exercises</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d321bd4",
+   "metadata": {},
+   "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "18d360bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greeting(name):\n",
+    "    if name == 'Batman':\n",
+    "        return 'Hello Batman! So, nice to meet you!'\n",
+    "    return f'Hello {name}!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bf729937",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Batman! So, nice to meet you!'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greeting('Batman')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "117298de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello John!'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greeting('John')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6faf0f0",
+   "metadata": {},
+   "source": [
+    "If the argument is true (where name == Batman), the return statement 'Hello Batman! So, nice to meet you!' exits the function. If the argument is not true, the if block is not executed and is skipped, with the next line being the return f'Hello {name}!'."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4f3e025",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "b1079b3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_bmi(weight, height):\n",
+    "    bmi = weight / (height ** 2)\n",
+    "    if bmi < 18.5:\n",
+    "        print(f\"Your BMI is UNDERWEIGHT at {bmi:.3f}\")\n",
+    "    if bmi >= 18.5 and bmi <= 24.9:\n",
+    "        print(f\"Your BMI is NORMAL WEIGHT at {bmi:.3f}\")\n",
+    "    if bmi >= 25 and bmi <= 29.9:\n",
+    "        print(f\"Your BMI is OVERWEIGHT at {bmi:.3f}\")\n",
+    "    if bmi >= 30:\n",
+    "        print(f\"Your BMI is OBESE at {bmi:.3f}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5b4c913b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your BMI is OBESE at 193.906\n"
+     ]
+    }
+   ],
+   "source": [
+    "calculate_bmi(700, 1.9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a71212fd",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "d513b140",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_factorials(n):\n",
+    "    start = 1\n",
+    "    for i in range(1, n + 1): # 'n + 1' allows inclusion of the value of 'n'\n",
+    "        start *= i # 1 * 2 * ... (n + 1)\n",
+    "\n",
+    "    if n < 0:\n",
+    "        start -= 1\n",
+    "        print(f\"The value input: {n} cannot be negative!\")\n",
+    "    \n",
+    "    return start\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "bed7ab47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_factorials(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "9124245d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value input: -2 cannot be negative!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_factorials(-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4c89962",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
