READY FOR REVIEW FUNCTIONS_(GOOD)_EXERCISE

--- a/5.2_functions__exercises/functions_(good)_exercises.ipynb
+++ b/5.2_functions__exercises/functions_(good)_exercises.ipynb
@@ -1,1 +1,362 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Good) Exercises</span></div>"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Good) Exercises</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34d1fc3f",
+   "metadata": {},
+   "source": [
+    "## Exercise 1 (Celsisus to Farenheit or Kelvin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c21ec2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Celisus to Kelvin\n",
+    "# K = C + 273.15\n",
+    "\n",
+    "# Celsius to Fahrenheit \n",
+    "# F = ((9/5) * C) + 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a4a52c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_celsius(temperature_celsius, target_scale = 'Fahrenheit'): # setting default value of target_scale = 'Fahrenheit'\n",
+    "    celsius = float(temperature_celsius)\n",
+    "    \n",
+    "    if target_scale == \"Kelvin\":\n",
+    "        return celsius + 273.15\n",
+    "    elif target_scale == \"Fahrenheit\": # using elif ensures the target_scale are mutually exclusive events\n",
+    "        return ((9/5) * celsius) + 32\n",
+    "    \n",
+    "    else:\n",
+    "        return \"Please input 2nd argument as 'Kelvin' or 'Fahrenheit' only!\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8823358c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "122.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_celsius(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "be907ff0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "122.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_celsius(50, 'Fahrenheit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "adce6d28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "323.15"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_celsius(50, 'Kelvin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6f770008",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Please input 2nd argument as 'Kelvin' or 'Fahrenheit' only!\""
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_celsius(50, 'Celsius')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71ca5702",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 (Fahrenheit to Celsius or Kelvin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "106f57d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fahrenheit to Kelvin\n",
+    "# K = C + 273.15\n",
+    "# K = ((F - 32) * 5/9) + 273.15\n",
+    "\n",
+    "# Celsius to Fahrenheit \n",
+    "# F = ((9/5) * C) + 32\n",
+    "# C = (F - 32) * 5/9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0e03dc37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_fahrenheit(temperature_fahrenheit, target_scale = 'Celsius'):\n",
+    "    fahren = float(temperature_fahrenheit)\n",
+    "\n",
+    "    if target_scale == 'Kelvin':\n",
+    "        return ((fahren - 32) * 5/9) + 273.15\n",
+    "    \n",
+    "    elif target_scale == 'Celsius':\n",
+    "        return (fahren - 32) * 5/9\n",
+    "    \n",
+    "    else:\n",
+    "        return \"Please input 2nd argument as 'Kelvin' or 'Celsius' only!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "09dba562",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6.666666666666667"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_fahrenheit(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d3b6e16e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "272.0388888888889"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_fahrenheit(30, 'Kelvin')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d69df88",
+   "metadata": {},
+   "source": [
+    "## Exercise 3 (General Temperature Conversion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22aea24e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_temperature(temperature, source_scale, target_scale):\n",
+    "    temp = float(temperature)\n",
+    "    if source_scale == 'Celsius' and target_scale == 'Kelvin':\n",
+    "        return temp + 273.15\n",
+    "    elif source_scale == 'Celsius' and target_scale == 'Fahrenheit':\n",
+    "        return ((9/5) * temp) + 32\n",
+    "    elif source_scale == 'Fahrenheit' and target_scale == 'Celsius':\n",
+    "        return (temp - 32) * 5/9\n",
+    "    elif source_scale == 'Fahrenheit' and target_scale == 'Kelvin':\n",
+    "        return ((temp - 32) * 5/9) + 273.15\n",
+    "    elif source_scale == 'Kelvin' and target_scale == 'Celsius':\n",
+    "        return temp - 273.15\n",
+    "    elif source_scale == 'Kelvin' and target_scale == 'Fahrenheit':\n",
+    "        return 9/5 * (temp - 273.15) + 32\n",
+    "    else:\n",
+    "        return \"Please input only 'Celsius', 'Fahrenheit', or 'Kelvin' in the blanks (temperature value, ___, ___) only!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "048cad5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-253.14999999999998"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_temperature(20, 'Kelvin', 'Celsius')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9ae1b14c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-423.66999999999996"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_temperature(20, 'Kelvin', 'Fahrenheit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3f10777a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Please input only 'Celsius' , 'Fahrenheit', or 'Kelvin' in the blanks (temperature float, ___, ___) only!\""
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_temperature(20, 'Kelvin', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "476a5ed2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
